--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chalk": "^2.4.2",
     "cookie-session": "^2.1.0",
